编写简易聊天界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".ui.MainActivity"></activity>
         <activity android:name=".ui.AddNewChatActivity"></activity>
+        <activity android:name=".ui.ChatActivity"></activity>
     </application>
 
 </manifest>
