--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ui.MainActivity"></activity>
         <activity android:name=".ui.AddNewChatActivity"></activity>
         <activity android:name=".ui.ChatActivity"></activity>
+        <service android:name=".net.KeepAliveSevice"></service>
     </application>
 
 </manifest>
