--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
         <activity android:name=".ui.MainActivity"></activity>
         <activity android:name=".ui.AddNewChatActivity"></activity>
-        <activity android:name=".ui.ChatActivity"></activity>
+        <activity android:name=".ui.ChatActivity" android:windowSoftInputMode="adjustPan"></activity>
         <service android:name=".net.KeepAliveSevice"></service>
     </application>
 
